# mp_baseline_to_ros

./: .gitignore  LICENSE  README.md  raster_generator_experiments.ipynb
configs/: baseline_config.yaml
src/mp_baseline/: CMakeLists.txt  package.xml
src/mp_baseline/config/: mp_baseline.rviz
src/mp_baseline/launch/: top_down_raster.launch
src/mp_baseline/nodes/: demo_route_large.wld  proj_edited.png.aux.xml  top_down_rasterizer.py
